# multilog-py

./: README.md  example.py  example_console_levels.py  pyproject.toml  test_all_levels.py  test_logger.py
.claude/: settings.json
examples/: async_api.py  betterstack.py  console_formatting.py  level_filtering.py  rich_console.py  sync_and_async.py
src/multilog/: __init__.py  _core.py  async_logger.py  config.py  exceptions.py  levels.py  logger.py
src/multilog/handlers/: __init__.py  base.py  betterstack.py  console.py  file.py
src/multilog/sinks/: __init__.py  base.py  betterstack.py  console.py  file.py  rich_console.py
src/multilog_py/: __init__.py  config.py  exceptions.py  levels.py  logger.py  utils.py
src/multilog_py/handlers/: __init__.py  base.py  betterstack.py  console.py  file.py
tests/: test_base_sink.py  test_caller_info.py  test_console_sink.py  test_context_mutation.py  test_default_sinks.py  test_file_sink.py  test_levels.py
