[project]
name = "multilog-py"
version = "0.1.0"
description = "Multi-destination logging library with Betterstack integration"
readme = "README.md"
authors = [
    { name = "Neil", email = "121339378+codebyneil@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "TC001",  # Allow runtime imports for type hints (needed for handler base classes)
]

[tool.ruff.lint.isort]
known-first-party = ["multilog_py"]
